--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <img src=photo.jpeg width="200px">
     <title>Привет, мир!</title>
   </head>
   <body>
